"Created dropdown lists on index page and loaded suppliers and product categories into it"

--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -38,6 +38,26 @@
         <strong th:text="${category.name}">Category Title</strong>
     </div>
 
+    <div class="dropdown">
+    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        Products by Category
+        <span class="caret"></span>
+    </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li  th:each="category : ${categories}"><a th:href="'/supplier/' + ${category.id}" th:text="${category.name}">Action</a></li>
+        </ul>
+    </div><br></br>
+
+    <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Products by Supplier
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <li  th:each="supplier : ${suppliers}"><a th:href="'/supplier/' + ${supplier.id}" th:text="${supplier.name}">Action</a></li>
+        </ul>
+    </div><br></br>
+
     <div id="products" class="row list-group">
 
         <div class="item col-xs-4 col-lg-4" th:each="prod,iterStat : ${products}">
