Modified root name for product category filter

--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -44,7 +44,7 @@
         <span class="caret"></span>
     </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li  th:each="category : ${categories}"><a th:href="'/supplier/' + ${category.id}" th:text="${category.name}">Action</a></li>
+            <li  th:each="category : ${categories}"><a th:href="'/category/' + ${category.id}" th:text="${category.name}">Action</a></li>
         </ul>
     </div><br></br>
 
