--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -30,7 +30,7 @@
 <body>
 
 <div class="jumbotron text-center">
-    <h1>Codecool Shop</h1>
+    <h1 th:text="${supplier}">Codecool Shop</h1>
 </div>
 
 <div class="container">
