--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -32,8 +32,8 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" th:text="${cartSize}"></a></li>
-            <li><a class="navbar-brand" href="#">
+            <li><a href="/showcart/" th:text="${cartSize}"></a></li>
+            <li><a class="navbar-brand" href="/showcart/">
                 <img src="/img/cart.png" width="32" height="32"></img>
             </a></li>
         </ul>
