cart.html: contains sumPrice of the cart; ProductController: sums the prices of the cart, also checks currencies, passing to the template. (if there are items in the cart with different currencies it'll respond to that)

--- a/src/main/resources/templates/product/cart.html
+++ b/src/main/resources/templates/product/cart.html
@@ -65,8 +65,8 @@
         </div>
         </tbody>
     </table>
+    <h2 th:text="'Total: ' + ${sumPrice} + ' ' + ${currency}"></h2>
 </div>
-
 <div th:replace="footer :: copy"></div>
 
 </body>
