cart.html: Error checking when summing total; ProductController: adds error message if error happens. isError boolean passed to html

--- a/src/main/resources/templates/product/cart.html
+++ b/src/main/resources/templates/product/cart.html
@@ -65,7 +65,8 @@
         </div>
         </tbody>
     </table>
-    <h2 th:text="'Total: ' + ${#numbers.formatDecimal(sumPrice,0, 'DEFAULT', 2, 'DEFAULT')} + ' ' + ${currency}"></h2>
+    <h2 th:if="${isError}" th:text="${errorMessage}"></h2>
+    <h2 th:unless="${isError}" th:text="'Total: ' + ${#numbers.formatDecimal(sumPrice,0, 'DEFAULT', 2, 'DEFAULT')} + ' ' + ${currency}"></h2>
 </div>
 <div th:replace="footer :: copy"></div>
 
