--- a/src/main/resources/templates/product/cart.html
+++ b/src/main/resources/templates/product/cart.html
@@ -31,6 +31,7 @@
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
+        <a class="btn btn-success" href="/">Main Page</a>
         <ul class="nav navbar-nav navbar-right">
             <li><a href="/showcart/" th:text="${cartSize}"></a></li>
             <li><a class="navbar-brand" href="/showcart/">
