--- a/src/main/resources/templates/forms.html
+++ b/src/main/resources/templates/forms.html
@@ -28,7 +28,21 @@
 </head>
 
 <body>
-
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav navbar-left">
+            <li><a class="btn btn-success" href="/">Main Page</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a class="btn btn-success" href="/login">Login</a></li>
+            <li><a class="btn btn-success" href="/sign-up">Sign Up</a></li>
+            <li><a href="/showcart/" th:text="${cartSize}"></a></li>
+            <li><a class="navbar-brand" href="/showcart/">
+                <img src="/img/cart.png" width="32" height="32"></img>
+            </a></li>
+        </ul>
+    </div>
+</nav>
 <div class="jumbotron text-center">
     <h1>Codecool Shop</h1>
 </div>
