--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,8 +47,8 @@
     </div>
         <div>
         <form method="POST" action="/login">
-            <h3>Username: </h3><input type="text" name="name" value=""/><br/>
-            <h3>Password: </h3><input type="text" name="email" value=""/><br/><br/>
+            <h3>E-mail: </h3><input type="text" name="email" value=""/><br/>
+            <h3>Password: </h3><input type="password" name="password" value=""/><br/><br/>
             <input class="btn btn-success" type="submit" value="Login"/>
         </form>
     </div>
