--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Codecool" />
@@ -38,6 +38,24 @@
         </ul>
     </div>
 </nav>
-<h1>Sign up here</h1>
+<div class="jumbotron text-center">
+    <h1>Codecool Shop</h1>
+</div>
+<div class="container">
+    <div class="well well-sm">
+        <strong th:text="${title}"></strong>
+    </div>
+    <div>
+        <form method="POST" action="/sign-up">
+            <h3>Name: </h3><input type="text" name="name" value=""/><br/>
+            <h3>E-mail: </h3><input type="text" name="email" value=""/><br/>
+            <h3>Password: </h3><input type="password" name="password" value=""/><br/><br/>
+            <input class="btn btn-success" type="submit" value="Login"/>
+        </form>
+    </div>
+</div>
+
+<div th:replace="footer :: copy"></div>
+
 </body>
 </html>
