--- a/src/main/resources/templates/product/cart.html
+++ b/src/main/resources/templates/product/cart.html
@@ -1,54 +1,13 @@
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Codecool" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Codecool Shop</title>
-
-    <!-- Latest compiled and minified Jquery -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" type="text/css" href="/css/custom.css" />
+    <div th:replace="head :: copy"></div>
 </head>
 
 <body>
 
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <ul class="nav navbar-nav navbar-left">
-            <li><a class="btn btn-success" href="/">Main Page</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <p th:if="${session} == null">
-            <li><a class="btn btn-success" href="/login">Login</a></li>
-            <li><a class="btn btn-success" href="/sign-up">Sign Up</a></li>
-            </p>
-            <p th:unless="${session} == null">
-            <li><a class="btn btn-success" href="/logout">Logout</a></li>
-            </p>
-            <li><a href="/showcart/" th:text="${cartSize}"></a></li>
-            <li><a class="navbar-brand" href="/showcart/">
-                <img src="/img/cart.png" width="32" height="32"></img>
-            </a></li>
-        </ul>
-    </div>
-</nav>
+<div th:replace="navbar :: copy"></div>
+
 <div class="jumbotron text-center">
     <h1 th:text="${title}"></h1>
 </div>
@@ -69,7 +28,7 @@
                 <td th:text="${iter.index}+1"></td>
                 <td th:text="${cartProduct.key.name}"></td>
                 <td>
-                    <form th:attr="action='/changeQuantity/' + ${cartProduct.key.id}">
+                    <form th:attr="action='/protected/changeQuantity/' + ${cartProduct.key.id}">
                         <input type="number" name="quantity" min="0" max="99999" th:value="${cartProduct.value}"></input>
                         <button type="submit" class="btn btn-success">Set</button>
                     </form>
@@ -78,7 +37,7 @@
                 ${#numbers.formatDecimal((cartProduct.key.defaultPrice)*(cartProduct.value),0, 'DEFAULT', 2, 'DEFAULT')}
                 + ' ' + ${cartProduct.key.defaultCurrency} "></td>
                 <td>
-                    <a th:attr="href='/remove/' + ${cartProduct.key.id}">
+                    <a th:attr="href='/protected/remove/' + ${cartProduct.key.id}">
                         <span class="glyphicon glyphicon-remove"></span>
                     </a>
                 </td>
@@ -89,7 +48,7 @@
     <h2 th:if="${isError}" th:text="${errorMessage}"></h2>
     <div th:unless="${isError}">
         <h2 th:text="'Total: ' + ${#numbers.formatDecimal(sumPrice,0, 'DEFAULT', 2, 'DEFAULT')} + ' ' + ${currency}"></h2>
-        <form action="/checkout" method="GET">
+        <form action="/protected/checkout" method="GET">
             <button type="submit" class="btn btn-success">Proceed to checkout</button>
         </form>
     </div>
@@ -97,8 +56,6 @@
 <div th:unless="${cartSize} != 0">
     <h2>Empty cart</h2>
 </div>
-<div class="footer">
-    <p>© 2016 Codecool Budapest </p>
-</div>
+<div th:replace="footer :: copy"></div>
 </body>
 </html>
