--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -1,56 +1,15 @@
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Codecool" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Codecool Shop</title>
-
-    <!-- Latest compiled and minified Jquery -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous" />
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" type="text/css" href="/css/custom.css" />
+    <div th:replace="head :: copy"></div>
 </head>
 
 <body>
-<p th:text="${session}"></p>
+
+<div th:replace="navbar :: copy"></div>
 
 
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <ul class="nav navbar-nav navbar-left">
-            <li><a class="btn btn-success" href="/">Main Page</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <p th:if="${session} == null">
-                <li><a class="btn btn-success" href="/login">Login</a></li>
-                <li><a class="btn btn-success" href="/sign-up">Sign Up</a></li>
-            </p>
-            <p th:unless="${session} == null">
-                <li><a class="btn btn-success" href="/logout">Logout</a></li>
-            </p>
-            <li><a href="/showcart/" th:text="${cartSize}"></a></li>
-            <li><a class="navbar-brand" href="/showcart/">
-                <img src="/img/cart.png" width="32" height="32"></img>
-            </a></li>
-        </ul>
-    </div>
-</nav>
+
 <div class="jumbotron text-center">
     <h1>Codecool Shop</h1>
 </div>
@@ -92,7 +51,7 @@
                             <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" th:href="'/cart/' + ${prod.id}">Add to cart</a>
+                            <a th:if="${session}!=null" class="btn btn-success" th:href="'/protected/cart/' + ${prod.id}">Add to cart</a>
                         </div>
                     </div>
                 </div>
