--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -15,6 +15,7 @@
         <strong th:text="${title}"></strong>
     </div>
     <div>
+        <p th:if="${error} != null" th:text="${error}" style="color: darkred"></p>
         <form method="POST" action="/sign-up">
             <h3>Name: </h3><input type="text" name="name" value=""/><br/>
             <h3>E-mail: </h3><input type="text" name="email" value=""/><br/>
